noinst_LTLIBRARIES = libknowledge.la

libknowledge_la_LIBADD = \
	../utility/libutility.la

AM_CPPFLAGS = \
	-I$(top_srcdir)/src

libknowledge_la_SOURCES = \
	snptranslator.h \
	chromosome.h \
	genegenemodel.h \
	genegenemodelarchive.h \
	groupmanager.h \
	groupmanagerdb.h \
	region.h \
	regioncontainer.h \
	regionmanager.h \
	regionmanagerdb.h \
	snpdataset.h \
	snpsnpmodel.h \
	chromosome.cpp \
	def.cpp \
	genegenemodel.cpp \
	genegenemodelarchive.cpp \
	groupmanager.cpp \
	groupmanagerdb.cpp \
	region.cpp \
	regioncontainer.cpp \
	regionmanager.cpp \
	regionmanagerdb.cpp \
	snpdataset.cpp \
	snpsnpmodel.cpp
