noinst_LTLIBRARIES = libknowledge.la

libknowledge_la_LIBADD = \
	../utility/libutility.la

AM_CPPFLAGS = \
	-I$(top_srcdir)/src

libknowledge_la_SOURCES = \
	biomodel.h \
	chromosome.h \
	def.h \
	genegenemodel.h \
	genegenemodelarchive.h \
	group.h \
	groupmanager.h \
	groupmanagerdb.h \
	region.h \
	regioncontainer.h \
	regionmanager.h \
	regionmanagerdb.h \
	snpdataset.h \
	snpsnpmodel.h \
	biomodel.cpp \
	chromosome.cpp \
	def.cpp \
	genegenemodel.cpp \
	genegenemodelarchive.cpp \
	group.cpp \
	groupmanager.cpp \
	groupmanagerdb.cpp \
	region.cpp \
	regioncontainer.cpp \
	regionmanager.cpp \
	regionmanagerdb.cpp \
	snpdataset.cpp \
	snpsnpmodel.cpp
